fix card padding

--- a/src/contacts.less
+++ b/src/contacts.less
@@ -10,7 +10,14 @@
   min-height: 452px;
   max-height: 452px;
   overflow-y: auto;
-  //height: 100%;
+
+  :global {
+    .ant-card-body {
+      padding-left: 8px;
+      padding-top: 16px;
+      padding-right: 7px;
+    }
+  }
 }
 
 .deptInfo {
