class component to t function component.

--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -47,12 +47,20 @@
   margin-top: 9px;
 
   .checkbox {
-    padding-left: 24px;
+    padding-left: 10px;
     float: left;
   }
 
   .pageNoe {
     float: right;
+  }
+}
+
+.label {
+  :global {
+    .ant-form-item-label {
+      line-height: 1;
+    }
   }
 }
 
