--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -7,15 +7,18 @@
 }
 
 .card {
-  min-height: 452px;
-  max-height: 452px;
+  min-height: 347px;
+  max-height: 347px;
   overflow-y: auto;
 
   :global {
     .ant-card-body {
-      padding-left: 8px;
-      padding-top: 16px;
-      padding-right: 7px;
+      padding: 16px 7px 7px 8px;
+    }
+
+    .ant-list-sm .ant-list-item {
+      padding-top: 4px;
+      padding-bottom: 4px;
     }
   }
 }
@@ -86,5 +89,11 @@
     border-radius: 4px;
     border: 1px solid #375EEE;
     margin-left: 10px;
+  }
+
+  :global {
+    .ant-form-item{
+      margin-bottom:2px
+    }
   }
 }
