--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -70,7 +70,8 @@
 
 .pagination2 {
   width: 100%;
-  margin-top: 9px;
+  margin-top: 8px;
+  height: 24px;
 
   .checkbox2 {
     padding-left: 10px;
