--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -54,6 +54,10 @@
       font-weight: normal !important;
     }
 
+    .ant-table-wrapper{
+      overflow-y: auto !important;
+    }
+
     .ant-table-tbody > tr > td {
       padding: 6px 6px 5px !important;
       border-bottom: 0 !important;
