modify result div background color change to var(--bg-color)

--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -74,7 +74,7 @@
 
 .resultDiv {
   border: 1px solid #d9d9d9;
-  background: white;
+  background: var(--bg-color);
   width: 100%;
   min-height: 100px;
   max-height: 123px;
