--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -73,7 +73,7 @@
 }
 
 .resultDiv {
-  border: 1px solid #d9d9d9;
+  border: 1px solid var(--border-color);
   background: var(--bg-color);
   width: 100%;
   min-height: 100px;
