modify Modify the scrollbar style under win

--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -6,6 +6,25 @@
   padding-left: 10px;
 }
 
+
+/* 定义整体的宽度 */
+.card::-webkit-scrollbar {
+  width: 5px;
+  height: 44px !important;
+  background: rgba(0, 0, 0, 0.45);
+}
+
+/* 定义滚动条轨道 */
+.card::-webkit-scrollbar-track {
+  background: rgba(233, 233, 233, 1);
+}
+
+/* 定义滑块 */
+.card::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.45);
+  border-radius: 19px;
+}
+
 .card {
   min-height: 347px;
   max-height: 347px;
