--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -47,6 +47,10 @@
   padding-right: 5px;
 }
 
+.listEmpty{
+  padding-right: 5px;
+}
+
 .deptInfo {
   height: 21px;
   font-size: 15px;
@@ -99,13 +103,14 @@
   max-height: 123px;
   overflow-x: hidden;
   overflow-y: auto;
-  padding-top: 8px;
+  //padding-top: 8px;
 
   .deptTag {
     color: #1890FF;
     background-color: #E6F7FF;
     border: 1px solid #91D5FF;
     margin-left: 10px;
+    margin-top: 8px;
   }
 
   .userTag {
@@ -114,6 +119,7 @@
     border-radius: 4px;
     border: 1px solid #375EEE;
     margin-left: 10px;
+    margin-top: 8px;
   }
 
   :global {
