--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -128,3 +128,12 @@
     }
   }
 }
+
+.userTag {
+  color: #375EEE;
+  background-color: rgba(55, 94, 238, 0.09);
+  border-radius: 4px;
+  border: 1px solid #375EEE;
+  margin-left: 10px;
+  margin-top: 8px;
+}
