modify 选中显示的结果样式提出   --react-contacts-dept-color: #1890ff;   --react-contacts-dept-backgroud-color: #e6f7ff;   --react-contacts-dept-border-color: #91d5ff;   --react-contacts-user-color: #375eee;   --react-contacts-user-backgroud-color: rgba(55, 94, 238, 0.09);   --react-contacts-user-border-color: #375eee;

--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -107,17 +107,17 @@
   .deptTag {
     margin-top: 8px;
     margin-left: 10px;
-    color: #1890ff;
-    background-color: #e6f7ff;
-    border: 1px solid #91d5ff;
+    color: var(--react-contacts-dept-color);
+    background-color: var(--react-contacts-dept-backgroud-color);
+    border: 1px solid var(--react-contacts-dept-border-color);
   }
 
   .userTag {
     margin-top: 8px;
     margin-left: 10px;
-    color: #375eee;
-    background-color: rgba(55, 94, 238, 0.09);
-    border: 1px solid #375eee;
+    color: var(--react-contacts-user-color);
+    background-color: var(--react-contacts-user-backgroud-color);
+    border: 1px solid var(--react-contacts-user-border-color);
     border-radius: 4px;
   }
 
@@ -126,13 +126,4 @@
       margin-bottom: 2px;
     }
   }
-}
-
-.userTag {
-  margin-top: 8px;
-  margin-left: 10px;
-  color: #375eee;
-  background-color: rgba(55, 94, 238, 0.09);
-  border: 1px solid #375eee;
-  border-radius: 4px;
 }
