--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -58,13 +58,27 @@
 
 .itemDiv {
   width: 100%;
+  display: contents;
 
   .checkbox {
     float: left;
+    text-align: left;
+    width: 120px;
+    span:nth-child(2){
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+    }
+
   }
 
   .deptName {
     float: right;
+    text-align: left;
+    width: 100px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 }
 
