--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -80,6 +80,17 @@
     overflow: hidden;
     white-space: nowrap;
   }
+
+  .deptName_disabled{
+    float: right;
+    text-align: left;
+    width: 100px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    color: rgba(0, 0, 0, 0.25);
+    cursor: not-allowed;
+  }
 }
 
 .itemDiv:hover {
