💄 style(v1): UI改版样式调整
UI改版样式调整

--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -3,7 +3,8 @@
 }
 
 .treeLeft {
-  padding-left: 10px;
+  padding-left: 0;
+  //padding-left: 10px;
 }
 
 // /* 定义整体的宽度 */
@@ -119,17 +120,23 @@
   }
 }
 
+.number {
+  color: var(--react-contacts-number-color);
+}
+
 .resultDiv {
   width: 100%;
   min-height: 100px;
   max-height: 123px;
   overflow-x: hidden;
   overflow-y: auto;
-  background: var(--bg-color);
+  background: var(--react-contacts-bg-color);
   border: 1px solid var(--border-color);
+  border-radius: 6px;
   //padding-top: 8px;
 
   .deptTag {
+    height: 24px;
     margin-top: 8px;
     margin-left: 10px;
     color: var(--react-contacts-dept-color);
@@ -138,6 +145,7 @@
   }
 
   .userTag {
+    height: 24px;
     margin-top: 8px;
     margin-left: 10px;
     color: var(--react-contacts-user-color);
