feat(meeting): 新加userName区分同名用户

--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -64,13 +64,22 @@
   .checkbox {
     float: left;
     text-align: left;
-    width: 120px;
-    span:nth-child(2){
+    width: 100px;
+    span:nth-child(2) {
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
     }
+  }
 
+  .userName {
+    width: 120px;
+    float: right;
+    text-align: left;
+    margin-right: 10px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
 
   .deptName {
@@ -82,13 +91,26 @@
     white-space: nowrap;
   }
 
-  .deptName_disabled{
+  .deptName_disabled {
     float: right;
     text-align: left;
     width: 100px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    color: rgba(0, 0, 0, 0.25);
+    cursor: not-allowed;
+  }
+
+  .userName_disabled {
+    width: 120px;
+    float: right;
+    text-align: left;
+    margin-right: 10px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+
     color: rgba(0, 0, 0, 0.25);
     cursor: not-allowed;
   }
@@ -161,15 +183,15 @@
   }
 }
 
-.userText{
+.userText {
   cursor: pointer;
 }
-.textColor{
-  color: #2ea498;;
+.textColor {
+  color: #2ea498;
   font-weight: 400;
   background-color: #f8f8f8;
 }
-.userTextWrapper{
+.userTextWrapper {
   display: flex;
   align-items: center;
   margin: 4px 0 4px 23px;
