feat(user):布局调整&新增头像，英文名显示，设置常用功能

--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -26,8 +26,8 @@
 }
 
 .card {
-  min-height: 347px;
-  max-height: 347px;
+  min-height: 381px;
+  max-height: 381px;
   overflow-y: auto;
 
   :global {
@@ -187,7 +187,7 @@
   cursor: pointer;
 }
 .textColor {
-  color: #2ea498;
+  color: #1C5297;
   font-weight: 400;
   background-color: #f8f8f8;
 }
