feat(frequent):可配置常用联系人功能

--- a/src/components/contacts.less
+++ b/src/components/contacts.less
@@ -90,6 +90,28 @@
     overflow: hidden;
     white-space: nowrap;
   }
+  .setFrequent{
+    float: right;
+    text-align: left;
+    width: 100px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    color: #1C5297;
+    span{
+      cursor: pointer;
+    } 
+  }
+  .setFrequent_disabled{
+    float: right;
+    text-align: left;
+    width: 100px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    color: rgba(0, 0, 0, 0.25);
+    cursor: not-allowed;
+  }
 
   .deptName_disabled {
     float: right;
